# Equasover

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/config/: cloneable.h
src/core/data_structure/: array_list.cpp  array_list.h  stack.cpp  stack.h
src/core/data_type/: string.cpp  string.h
src/core/exception/: my_exception.cpp  my_exception.h
src/genetic-algorithm/: genetic_algorithm.cpp  genetic_algorithm.h
src/genetic-algorithm/operator_system/: operator_manager.cpp  operator_manager.h
src/genetic-algorithm/operator_system/base/: base_ope.cpp  base_ope.h
src/genetic-algorithm/polish_notation/: polish_notation.cpp  polish_notation.h
src/util/math_helper/: math_helper.cpp  math_helper.h
src/util/my_string/: my_string.h
src/util/polish_notation/: polish_notation.cpp  polish_notation.h
src/util/string_helper/: string_helper.cpp  string_helper.h
